chore(demo): fix colors not having enough contrast

--- a/src/demo/utils/objects.css
+++ b/src/demo/utils/objects.css
@@ -1,5 +1,5 @@
 .link {
-  border-bottom: 1px dotted #43b1b0;
+  border-bottom: 1px dotted #007d7e;
 }
 
 blockquote {
