--- a/src/demo/utils/utilities.css
+++ b/src/demo/utils/utilities.css
@@ -3,6 +3,6 @@
 }
 
 .u-wagtail {
-  color: #43b1b0;
+  color: #007d7e;
   white-space: nowrap;
 }
